--- a/src/main/webapp/resources/css/findid.css
+++ b/src/main/webapp/resources/css/findid.css
@@ -115,6 +115,16 @@
     border: 0;
 }
 
+.btn {
+	font-size: 18px;
+	font-weight: bold;
+	text-align: center;
+	display: inline-block;
+	vertical-align: middle;
+	border-radius: 30px;
+	transition-duration: 0.2s
+}
+
 .btn.bgc_white {
 	background-color: #fff;
 	border: 2px solid #009223;
@@ -155,6 +165,7 @@
 	height: 50px;
 	line-height: 50px;
 	letter-spacing: -0.03em;
+	font-weight: bold;
 }
 
 .btn.bgc_point:hover {
@@ -169,15 +180,7 @@
 	margin: 0 4px;
 }
 
-.btn {
-	font-size: 18px;
-	font-weight: bold;
-	text-align: center;
-	display: inline-block;
-	vertical-align: middle;
-	border-radius: 30px;
-	transition-duration: 0.2s
-}
+
 
 .btn span {
 	display: inline-block;
@@ -191,5 +194,15 @@
 }
 
 .btn_area .btn ~ .btn {
+    margin-left: 7px;
+}
+
+.btn .i_reg:after{
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    width: 21px;
+    height: 16px;
+    background: url(../images/common/icon_reg.png) 0 0 no-repeat;
     margin-left: 7px;
 }
