--- a/src/main/webapp/resources/css/ui.button.css
+++ b/src/main/webapp/resources/css/ui.button.css
@@ -20,7 +20,7 @@ button.btn.xs{padding:1px 5px; font-size:12px;}
 button.default{color:#333; background-color:#fff; border-color:#ccc;}
 button.default.active,
 button.default:hover{background-color: #e6e6e6; border-color: #adadad;}
-button.blue{color:#fff; background-color:#337ab7; border-color:#2e6da4}
+button.blue{color:#fff; background-color:#009223; border-color:#025E2C}
 button.blue:hover{background-color:#204d74; border-color:#122b40;}
 button.gray{color:#666; background-color:#e1e5ec; border-color:#e1e5ec;}
 button.gray:hover{background-color:#c2cad8; border-color:#bcc5d4;}
